# rs_systemtime

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
include/: better_ctime.hpp  rs_systemtime.h  rs_systemtime.hpp
src/: better_ctime.h  lib.rs
